SERVER-54040 Resharding may fail to throw WouldChangeOwningShard despite destined recipient having changed